# Autonomous_research_assistant

./: .gitignore  README.md  a2as.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
backend/: .env.example  Dockerfile  api.py
backend/agents/: __init__.py  agent.py
backend/ingestion/: chunker.py  embedder.py  entity_extractor.py  pipeline.py
backend/memory/: persistent.py
backend/storage/: neo4j_store.py  qdrant_store.py
backend/tests/: test_api.py  test_memory.py
backend/tools/: __init__.py  arxiv_tool.py  memory_tool.py  retrieval_tool.py  scrapper_tool.py  serper_tool.py  wikipedia_tool.py
frontend/: Dockerfile  app.py
